<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.ifengkou</groupId>
    <version>1.0-SNAPSHOT</version>
    <artifactId>oss-service-starter</artifactId>

    <name>oss-service-starter</name>
    <description>SpringBoot starter for object storage client</description>
    <packaging>jar</packaging>
    <url>https://github.com/ifengkou/meteor-component/starter/oss-service-starter</url>
    <organization>
        <name>ifengkou@hotmail.com</name>
        <url>ifengkou@hotmail.com</url>
    </organization>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>sloong</name>
            <email>ifengkou@hotmail.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/ifengkou/meteor-component.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/ifengkou/meteor-component.git
        </developerConnection>
        <url>https://github.com/ifengkou/meteor-component</url>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/ifengkou/meteor-component/issues</url>
    </issueManagement>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <spring-boot.version>2.7.18</spring-boot.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
            <version>${spring-boot.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <!--<version>4.3.30.RELEASE</version>-->
            <version>5.2.25.RELEASE</version>
            <scope>provided</scope>
        </dependency>

        <!-- minio 对象存储-->
        <dependency>
            <groupId>io.minio</groupId>
            <artifactId>minio</artifactId>
            <version>8.5.7</version>
        </dependency>
        <!-- aws s3 对象存储-->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-s3</artifactId>
            <version>1.12.625</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.9</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>github</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-deploy-plugin</artifactId>
                        <version>3.1.1</version>
                        <configuration>
                            <altDeploymentRepository>
                                internal.repo::default::file://${project.build.directory}/mvn-repo
                            </altDeploymentRepository>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.github.github</groupId>
                        <artifactId>site-maven-plugin</artifactId>
                        <version>0.12</version>
                        <configuration>
                            <message>Maven artifacts for ${project.version}</message>
                            <noJekyll>true</noJekyll>
                            <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
                            <branch>refs/heads/master</branch>
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <repositoryName>maven-repo</repositoryName>
                            <repositoryOwner>ifengkou</repositoryOwner>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>site</goal>
                                </goals>
                                <phase>deploy</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <repository>
                    <id>github</id>
                    <name>GitHub ifengkou Apache Maven Packages</name>
                    <url>https://maven.pkg.github.com/ifengkou/maven-repo</url>
                </repository>
            </distributionManagement>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <!-- Compile -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.0</version>
                        <configuration>
                            <source>${java.version}</source>
                            <target>${java.version}</target>
                        </configuration>
                    </plugin>

                    <!-- gpg plugin,用于签名认证 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!--staging puglin,用于自动执行发布阶段(免手动)-->
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <!-- release plugin,用于发布到release仓库部署插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>3.0.1</version>
                    </plugin>
                </plugins>
            </build>
            <!-- 这里引入 Settings.xml 中设置的用户名、密码 -->
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <name>snapshot</name>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <name>staging</name>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
                </repository>


            </distributionManagement>
        </profile>

    </profiles>
</project>